<resources>
    <string name="app_name">Video Player</string>
    <string name="video_library">Video Library</string>
    <string name="folders">Folders</string>
    <string name="sort">Sort</string>

    <string name="size_in_b">%1$.2f B</string>
    <string name="size_in_kb">%1$.2f KB</string>
    <string name="size_in_mb">%1$.2f MB</string>
    <string name="size_in_gb">%1$.2f GB</string>
    <string name="by_size">By Size</string>
    <string name="by_name">By Name</string>
    <string name="by_date">By Date</string>
    <string name="share">Share</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="properties">Properties</string>
    <string name="cancel">Cancel</string>
    <string name="file_name">File Name</string>
    <string name="path">Path</string>
    <string name="size">Size</string>
    <string name="duration">Duration</string>
    <string name="resolution">Resolution</string>
    <string name="tap_to_unlock">Tap to unlock</string>
    <string name="screen_locked">Screen Locked</string>
    <string name="unlock_screen">Unlock Screen</string>

</resources>